add inverse dft

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,15 +1,15 @@
 ADD_DEFINITIONS(-DSOURCE_DIR="${PROJECT_SOURCE_DIR}/")
 
-add_executable(task1 task1.cpp)
-
-target_link_libraries(task1
+add_executable(dft_test dft_test.cpp)
+target_link_libraries(dft_test
   PUBLIC
     ${OpenCV_LIBS}
     ft_lib
 )
-
 target_include_directories(
-  task1
+  dft_test
   PUBLIC
     ${OpenCV_INCLUDE_DIRS}
 )
+add_test(NAME DFTTes
+         COMMAND dft_test)
