--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,14 @@
 cmake_minimum_required(VERSION 3.1...3.28)
 
-option(Demo "Demo" ON)
-
 project(ft_cpp LANGUAGES CXX)
 
 set (CMAKE_CXX_STANDARD 20)
 
 include(GNUInstallDirs)
+include(CTest)
 
 find_package(OpenCV REQUIRED)
 
 add_subdirectory(src)
 
-if (Demo)
-    add_subdirectory(demo)
-endif()
+add_subdirectory(test)
